# chrysalis

./: .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  Dockerfile  GEMINI.md  MEMORY.md  PULSE.md  README.md  TODO.md  chrysalis_cli.py  data_exploration.ipynb  docker-compose.yml  launch_chrysalis.sh  pyproject.toml  requirements.txt  run_pipeline.py  simulations.ipynb
.github/workflows/: ci.yml
chrysalis/research/: hypotheses.md
data/: chrysalis.db  knowledge_graph.graphml
data/literature/: percolation_social_dissolution.txt
data/raw_notes/: alchemical_transformation_pattern.md  grief_transformation_kubler_ross.md  ising_criticality_observation.md  liminal_rites_van_gennep.md  (+8 more)
docs/: final_report.md
research/: hypotheses.md  knowledge_graph_schema.md  literature_grounding.md  manuscript.tex  manuscript_structure.md  meta_analysis_report.md  neural_socio_mapping_summary.md  opt_report_Ising_Auto_Opt.json  opt_report_Ising_Fine_Opt.json  optimization_logic.md  references.md  robustness_metrics.md  search_queries.json  sql_schema_design.md  stress_test_design.md  stress_test_report_synthetic_stuck_liminal.md
schema/: ethnographic_record.json  processed_note.schema.json
simulations/: aggregate_results.py  example_experiment_config.json  opt_ising_config.json  query_experiments.py  robustness_experiment.json  run_experiment.py  run_sim.py  suggested_experiment.json  tmp_opt_config.json  xy_experiment_config.json
tests/: test_simulations.py  test_supernote_parser.py  test_universality_plotter.py  test_validate_notes.py
(+123 files in other folders)
